[package]
name = "modelos-concurrencia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "banquero-bussy-waiting"
path = "src/estado-compartido/banquero_bussy_waiting/main.rs"

[[bin]]
name = "banquero-sin-sincro"
path = "src/estado-compartido/banquero_sin_sincro/main.rs"

[[bin]]
name = "banquero-barriers"
path = "src/estado-compartido/banquero_barriers/main.rs"

[[bin]]
name = "barbero-semaforos"
path = "src/estado-compartido/barbero_semaforos/main.rs"


[[bin]]
name = "prog-asincronica"
path = "src/prog-asincronica/main.rs"

[[bin]]
name = "banquero-canales"
path = "src/actores-canales/banquero-canales/main.rs"

[[bin]]
name = "banquero-actores"
path = "src/actores-canales/banquero-actores/main.rs"

[[bin]]
name = "hola-andrea"
path = "src/practica-actix/hola-andrea/main.rs"

[dependencies]
std-semaphore = "0.1"
rand = "0.8"
actix = "0.13.5"
actix-rt = "2.0" # <-- Runtime for actix
futures-channel = "*"
tokio = "*"
actix_async_handler = "0.1.0"
