[package]
name = "modelos-concurrencia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "banquero-bussy-waiting"
path = "src/estado-compartido/banquero_bussy_waiting/main.rs"

[[bin]]
name = "banquero-sin-sincro"
path = "src/estado-compartido/banquero_sin_sincro/main.rs"

[[bin]]
name = "banquero-barriers"
path = "src/estado-compartido/banquero_barriers/main.rs"

[[bin]]
name = "barbero-semaforos"
path = "src/estado-compartido/barbero_semaforos/main.rs"


[[bin]]
name = "prog-asincronica"
path = "src/prog-asincronica/acceptor-server/main.rs"

[[bin]]
name = "banquero-canales"
path = "src/actores-canales/banquero-canales/main.rs"

[[bin]]
name = "banquero-actores"
path = "src/actores-canales/banquero-actores/main.rs"

[[bin]]
name = "hola-andrea"
path = "src/practica-actix/hola-andrea/main.rs"

[[bin]]
name = "fumadores-dummy-monitor"
path = "src/estado-compartido/fumadores-dummy-monitor/main.rs"

[[bin]]
name = "heladeria-actores"
path = "src/practica-actix/heladeria-robots-clientes/main.rs"

[[bin]]
name = "acceptor-actors"
path = "src/practica-actix/acceptor-server/main.rs"

[[bin]]
name = "filosofos-actores"
path = "src/actores-canales/filosofos-actores/main.rs"

[dependencies]
std-semaphore = "0.1"
rand = "0.8"
actix = "0.13.5"
actix-rt = "2.0" # <-- Runtime for actix
futures-channel = "*"
actix_async_handler = "0.1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0" # necesario para usar el main de tokio
tokio-util = "0.7" #para acceptor con actores
bytes = "1"# para la parte de trabajp con strem de bytes por los sockets... flata entender bien y revisar si es permitido por la catedra

[dev-dependencies]
actix_async_handler = "0.1.0"
